ghc-4335c07/testsuite/tests/deriving/should_fail/T1133A.hs

module T1133A where

import T1133Aa

newtype X = X Int deriving Enum
